# cpp-playground

./: imgui.ini  meson.build  notes.txt
.cache/clangd/index/: bgfx.h.E78C73A93ADFEF1D.idx  bx.h.CF13E6A868923210.idx  bx.inl.7A714075CE437019.idx  components.hpp.CADD357656BD2BEC.idx  config.h.DC324C25AFF6450F.idx  constants.h.255827B47369AD3B.idx  debug.h.DC911D835E74DCE0.idx  defines.h.077E6D915E4A6A51.idx  embedded_shader.h.FF57C4FC55A358AD.idx  entity_manager.hpp.603F2B9C9CFE5A25.idx  entt.hpp.68E5849AF0057278.idx  entt.hpp.C9D1D300FB64D032.idx  fs_ocornut_imgui.bin.h.AB9D69B76F157A06.idx  global.hpp.4792AD09BB02A11E.idx  imconfig.h.807B38AF40EED38B.idx  imgui.cpp.F49BECAAE5A9E39A.idx  imgui.h.444A78EC0EEDA580.idx  imgui_draw.cpp.F54AC5AE6DE12392.idx  imgui_impl_bgfx.cpp.4BECC0EA1107F8B3.idx  imgui_impl_bgfx.h.4F80C7C0EA6BC3A4.idx  imgui_impl_glfw.cpp.B8028C23C583B9D8.idx  imgui_impl_glfw.h.92D5F421EEF24FE9.idx  imgui_internal.h.FD4C26F3434429A5.idx  imgui_tables.cpp.42C18645829CB6C8.idx  imgui_widgets.cpp.C674A097B71116AB.idx  imstb_rectpack.h.9C163AD49F6B5369.idx  imstb_textedit.h.D241B764B2B00C8B.idx  imstb_truetype.h.E9E4D0FE4AF693F6.idx  macros.h.648A52D34C395246.idx  main.cpp.05483E4C622BDA3B.idx  math.h.5D3CD6EE454FB60D.idx  math.inl.40173B957EA984D6.idx  platform.h.51DFA44A66AA7CDB.idx  platform.h.6A5CCA24337D5C38.idx  (+16 more)
include/: cell.hpp  components.hpp  entity_manager.hpp  global.hpp  sparse_set.hpp
include/systems/: render_system.hpp
shaders/: frag_shader.glsl  vert_shader.glsl
src/: main.cpp  window.cpp
src/include/: globals.hpp  window.hpp
(+2 files in other folders)
